--- a/dots.html
+++ b/dots.html
@@ -14,7 +14,7 @@
     <head><title>dots</title>
 <style>
     .stack { display: grid;
-             grid-template-rows: 3fr 1fr;
+             grid-template-rows: 1fr minmax(100px, auto);
              grid-template-columns: 1fr;
              width: 100vw;
              height: 100vh; }
