Made grid work by adding overflow hidden.

--- a/dots.html
+++ b/dots.html
@@ -18,7 +18,7 @@
              grid-template-columns: 1fr;
              width: 100vw;
              height: 100vh; }
-    .row1 { }
+    .row1 { overflow: hidden; }
     .row2 { }
     form { display: table; width: 100%; }
     form p { display: table-row; }
