--- a/dots.html
+++ b/dots.html
@@ -2,11 +2,8 @@
     <!--
         Todo:
             Responsiveness
-            Resizable canvas
-            Grid-based layout
-            Zoom
             Stop/continue functionality
-            Report longest cycle
+            Zoom
             Add different generators
             Allow entry of numerical parameters
             Parameters on URL
@@ -20,11 +17,11 @@
              height: 100vh; }
     .row1 { overflow: hidden; }
     .row2 { }
-    form { display: table; width: 100%; }
+    form { display: table; width: 90%; padding: 10px; }
     form p { display: table-row; }
-    form label { display: table-cell; text-align: right; }
-    form input { display: table-cell; width: 90%;}
-    form span { display: table-cell; }
+    form label { display: table-cell; text-align: right; width: 1%; }
+    form input { display: table-cell; width: 95%;}
+    form span { display: table-cell; width: 1%;}
     canvas { width: 100%; height: 100%; }
 </style>
 <script>
