Updated todo list.

--- a/dots.html
+++ b/dots.html
@@ -2,7 +2,7 @@
     <!--
         Todo:
             Stop/continue functionality
-            Zoom
+            Pan
             Add different generators
             Allow entry of numerical parameters
             Parameters on URL
