--- a/dots.html
+++ b/dots.html
@@ -14,7 +14,7 @@
              grid-template-columns: 1fr;
              width: 100vw;
              height: 100vh; }
-    .row1 { overflow: hidden; }
+    .row1 {  overflow: hidden; }
     .row2 { }
     form { display: table; width: 90%; padding: 10px; }
     form p { display: table-row; }
@@ -231,7 +231,7 @@ window.onload = start;
         <p><label for="brad">Radius B&nbsp;</label><input id="brad" type="range" step="0.001" min="1" max="10" value="2"><span id="showbrad"></span></p>
         <p><label for="bn">Spin B&nbsp;</label><input id="bn" type="range" step="1" min="2" max="20" value="7"><span id="showbn"></span></p>
         <p><label for="dist">Separation&nbsp;</label><input id="dist" min="0" step="0.001" max="10" type="range" value="2.4"><span id="showdist"></span></p>
-        <p><label for="dist">Zoom&nbsp;</label><input id="zoom" min="1" step="1" max="20" type="range" value="1"><span id="showzoom"></span></p>
+        <p><label for="zoom">Zoom&nbsp;</label><input id="zoom" min="1" step="0.01" max="20" type="range" value="1"><span id="showzoom"></span></p>
     </form>
     Maximum order found: <span id="order"></span>
     </div></div>
