--- a/dots.html
+++ b/dots.html
@@ -15,13 +15,14 @@
              width: 100vw;
              height: 100vh; }
     .row1 {  overflow: hidden; }
-    .row2 { }
-    form { display: table; width: 90%; padding: 10px; }
+    .row2 { padding: 10px; }
+    form { display: table; width: 90%; }
     form p { display: table-row; }
     form label { display: table-cell; text-align: right; width: 1%; }
     form input { display: table-cell; width: 95%;}
     form span { display: table-cell; width: 1%;}
     canvas { width: 100%; height: 100%; }
+    body { margin: 0; }
 </style>
 <script>
 var width = 800;
