--- a/dots.html
+++ b/dots.html
@@ -75,7 +75,7 @@ function doanim() {
     deepest = 0;
     renderlim = 300;
     state = 0;
-    stoptime = performance.now() + 1000 * 60 * 3600; // stop after 60s
+    stoptime = performance.now() + 1000 * 60 ; // stop after 60s
     if (stopped) {
         stopped = false;
         requestAnimationFrame(dowork);
